# vectoWarsHybrid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VMGameStateDatasetSampleMapper.cpp  VMGameStateDatasetSampleMapper.h  VMGameStateSampleMapper.h  VMRandomInputPredictionStrategy.h  gamestate.cpp  gamestate.h  sh.exe.stackdump  start_vectorwar_1p.cmd  start_vectorwar_2p.cmd  test.cpp  vectorwar.cpp  vectorwar.h
Atlus/src/: CMakeLists.txt  core.cpp  parser.cpp  utils.cpp
Atlus/src/headers/: MLPData.h
headers/: FrameHolder.h
headers/ml/: DatasetSampleMapper.h  MLPModelWrapper.h
headers/service/gameState/: GameStateDatasetSamplerService.h
headers/service/inputPredictionStrategy/: HybridInputPredictionStrategyService.h
ml/: DatasetSampleMapper.cpp  MLPModelWrapper.cpp
service/gameState/: GameStateDatasetSamplerService.cpp
service/inputPredictionStrategy/: HybridInputPredictionStrategyService.cpp
